// =========================================================================
// Prisma 7 Production Schema for C2C Marketplace
// =========================================================================

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// -------------------------------------------------------------------------
// Enums 定义
// -------------------------------------------------------------------------

enum UserStatus {
  ACTIVE
  SUSPENDED
}

enum ProductStatus {
  LISTED // 出品中
  RESERVED // 取引中
  SOLD
  HIDDEN
}

enum OrderStatus {
  RESERVED
  PAID
  SHIPPED
  DELIVERED
  COMPLETED
}

enum ReviewRole {
  BUYER
  SELLER
}

enum BalanceTxType {
  CREDIT
  DEBIT
}

enum TxStatus {
  PENDING
  COMPLETED
  FAILED
}

enum NotificationType {
  TRANSACTION
  SYSTEM
  RISK
}

enum ReportStatus {
  PENDING
  INVESTIGATING
  RESOLVED
  DISMISSED
}

enum ActionTaken {
  NONE
  WARNING
  REMOVED
}

// -------------------------------------------------------------------------
// Models 定义
// -------------------------------------------------------------------------

model User {
  id             String     @id @default(uuid()) @db.Uuid
  email          String     @unique @db.VarChar(255)
  passwordHash   String     @map("password_hash") @db.VarChar(255)
  username       String     @db.VarChar(100)
  phone          String?    @db.VarChar(20)
  address        String?    @db.Text
  bio            String?    @db.Text
  status         UserStatus @default(ACTIVE)
  violationCount Int        @default(0) @map("violation_count") @db.Integer
  createdAt      DateTime   @default(now()) @map("created_at") @db.Timestamptz
  updatedAt      DateTime   @updatedAt @map("updated_at") @db.Timestamptz

  // 关系映射
  products        Product[]            @relation("UserProducts")
  buyerOrders     Order[]              @relation("BuyerOrders")
  sellerOrders    Order[]              @relation("SellerOrders")
  reviewsWritten  Review[]             @relation("ReviewsWritten")
  reviewsReceived Review[]             @relation("ReviewsReceived")
  favorites       Favorite[]
  comments        Comment[]
  balances        BalanceTransaction[]
  notifications   Notification[]
  reportsFiled    Report[]             @relation("ReporterRelation")

  @@map("users")
}

model Category {
  id        String   @id @default(uuid()) @db.Uuid
  name      String   @db.VarChar(100)
  parentId  String?  @map("parent_id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz

  // 自关联实现无限级分类
  parent   Category?  @relation("CategoryHierarchy", fields: [parentId], references: [id], onDelete: Cascade)
  children Category[] @relation("CategoryHierarchy")
  products Product[]

  @@unique([parentId, name])
  @@index([parentId])
  @@map("categories")
}

model Tag {
  id        String    @id @default(uuid()) @db.Uuid
  name      String    @unique @db.VarChar(50)
  createdAt DateTime  @default(now()) @map("created_at") @db.Timestamptz
  products  Product[] @relation("ProductTags")

  @@map("tags")
}

model Product {
  id          String        @id @default(uuid()) @db.Uuid
  sellerId    String        @map("seller_id") @db.Uuid
  categoryId  String        @map("category_id") @db.Uuid
  title       String        @db.VarChar(255)
  description String        @db.Text
  price       Decimal       @db.Decimal(10, 2)
  status      ProductStatus @default(LISTED)
  createdAt   DateTime      @default(now()) @map("created_at") @db.Timestamptz
  updatedAt   DateTime      @updatedAt @map("updated_at") @db.Timestamptz

  seller    User           @relation("UserProducts", fields: [sellerId], references: [id], onDelete: Cascade)
  category  Category       @relation(fields: [categoryId], references: [id], onDelete: Restrict)
  images    ProductImage[]
  tags      Tag[]          @relation("ProductTags")
  orders    Order[]
  favorites Favorite[]
  comments  Comment[]
  reports   Report[]

  @@index([sellerId])
  @@index([categoryId])
  @@index([status, price])
  @@map("products")
}

model ProductImage {
  id        String   @id @default(uuid()) @db.Uuid
  productId String   @map("product_id") @db.Uuid
  url       String   @db.VarChar(512)
  sortOrder Int      @default(0) @map("sort_order") @db.Integer
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz

  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@index([productId])
  @@map("product_images")
}

model Order {
  id             String      @id @default(uuid()) @db.Uuid
  productId      String      @map("product_id") @db.Uuid
  buyerId        String      @map("buyer_id") @db.Uuid
  sellerId       String      @map("seller_id") @db.Uuid
  status         OrderStatus @default(RESERVED)
  trackingNumber String?     @map("tracking_number") @db.VarChar(100)
  createdAt      DateTime    @default(now()) @map("created_at") @db.Timestamptz
  updatedAt      DateTime    @updatedAt @map("updated_at") @db.Timestamptz

  product  Product              @relation(fields: [productId], references: [id], onDelete: Restrict)
  buyer    User                 @relation("BuyerOrders", fields: [buyerId], references: [id], onDelete: Restrict)
  seller   User                 @relation("SellerOrders", fields: [sellerId], references: [id], onDelete: Restrict)
  reviews  Review[]
  balances BalanceTransaction[]

  @@index([productId])
  @@index([buyerId])
  @@index([sellerId])
  @@index([status])
  @@map("orders")
}

model Review {
  id           String     @id @default(uuid()) @db.Uuid
  orderId      String     @map("order_id") @db.Uuid
  reviewerId   String     @map("reviewer_id") @db.Uuid
  revieweeId   String     @map("reviewee_id") @db.Uuid
  rating       Int        @db.Integer
  comment      String?    @db.Text
  reviewerRole ReviewRole @map("reviewer_role")
  createdAt    DateTime   @default(now()) @map("created_at") @db.Timestamptz

  order    Order @relation(fields: [orderId], references: [id], onDelete: Cascade)
  reviewer User  @relation("ReviewsWritten", fields: [reviewerId], references: [id], onDelete: Cascade)
  reviewee User  @relation("ReviewsReceived", fields: [revieweeId], references: [id], onDelete: Cascade)

  @@unique([orderId, reviewerRole]) // 买卖双方就单笔订单只能写一份互评
  @@index([reviewerId])
  @@index([revieweeId])
  @@map("reviews")
}

model BalanceTransaction {
  id              String        @id @default(uuid()) @db.Uuid
  userId          String        @map("user_id") @db.Uuid
  orderId         String?       @map("order_id") @db.Uuid
  amount          Decimal       @db.Decimal(10, 2)
  fee             Decimal       @default(0.00) @db.Decimal(10, 2)
  netAmount       Decimal       @map("net_amount") @db.Decimal(10, 2)
  type            BalanceTxType
  status          TxStatus      @default(PENDING)
  bankAccountInfo String?       @map("bank_account_info") @db.Text
  createdAt       DateTime      @default(now()) @map("created_at") @db.Timestamptz

  user  User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  order Order? @relation(fields: [orderId], references: [id], onDelete: SetNull)

  @@index([userId])
  @@index([orderId])
  @@map("balance_transactions")
}

model Favorite {
  userId    String   @map("user_id") @db.Uuid
  productId String   @map("product_id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  product Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@id([userId, productId])
  @@index([productId])
  @@map("favorites")
}

model Comment {
  id        String   @id @default(uuid()) @db.Uuid
  productId String   @map("product_id") @db.Uuid
  userId    String   @map("user_id") @db.Uuid
  parentId  String?  @map("parent_id") @db.Uuid
  content   String   @db.Text
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz

  product Product   @relation(fields: [productId], references: [id], onDelete: Cascade)
  user    User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  parent  Comment?  @relation("CommentReplies", fields: [parentId], references: [id], onDelete: Cascade)
  replies Comment[] @relation("CommentReplies")

  reports Report[]

  @@index([productId])
  @@index([userId])
  @@index([parentId])
  @@map("comments")
}

model Notification {
  id        String           @id @default(uuid()) @db.Uuid
  userId    String           @map("user_id") @db.Uuid
  type      NotificationType
  title     String           @db.VarChar(255)
  content   String           @db.Text
  isRead    Boolean          @default(false) @map("is_read")
  createdAt DateTime         @default(now()) @map("created_at") @db.Timestamptz

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, isRead])
  @@map("notifications")
}

model Report {
  id          String       @id @default(uuid()) @db.Uuid
  reporterId  String       @map("reporter_id") @db.Uuid
  productId   String?      @map("product_id") @db.Uuid
  commentId   String?      @map("comment_id") @db.Uuid
  reason      String       @db.Text
  adminNotes  String?      @map("admin_notes") @db.Text
  status      ReportStatus @default(PENDING)
  actionTaken ActionTaken  @default(NONE) @map("action_taken")
  createdAt   DateTime     @default(now()) @map("created_at") @db.Timestamptz

  reporter User     @relation("ReporterRelation", fields: [reporterId], references: [id], onDelete: Cascade)
  product  Product? @relation(fields: [productId], references: [id], onDelete: SetNull)
  comment  Comment? @relation(fields: [commentId], references: [id], onDelete: SetNull)

  @@index([reporterId])
  @@index([productId])
  @@index([commentId])
  @@map("reports")
}
